--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^1.3.2",
     "styled-components": "^5.3.6",
     "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
