--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-lottie": "^1.2.3",
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-scrollable-feed": "^1.3.2",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^5.3.6",
     "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
@@ -47,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "react-lottie": {
+      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
+    }
   }
 }
