--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8000
-MONGO_URI = "mongodb+srv://akshays274:Akshay2023@cluster.sru9r28.mongodb.net/?retryWrites=true&w=majority"
-JWT_SECRET = "akshay"
+MONGO_URI = 'mongodb+srv://Saad_Mohamed_Saad:z9NhzI8y3LmWhCmO@lms.wu8y1pe.mongodb.net/group_youssef?retryWrites=true&w=majority&appName=LMS'
+JWT_SECRET = "saad"
