--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8000
-MONGO_URI = "mongodb+srv://akshays274:Akshay2023@cluster.sru9r28.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI = "mongodb+srv://akshays274:Akshay2023@cluster.sru9r28.mongodb.net/?retryWrites=true&w=majority&appName=Cluster"
 JWT_SECRET = "akshay"
